...
        ) {
            FloatingActionButtonMenu(
                modifier = Modifier.offset(y = 5.dp).testTag("FABMENU"),
                expanded = fabMenuExpanded && !isMapPage,
                button = {
                    ToggleFloatingActionButton(
                        modifier = Modifier.semantics { traversalIndex = -1f }.zIndex(21f).testTag("FAB"),
                        checked = fabMenuExpanded && !isMapPage,
                        onCheckedChange = { 
                            if (isMapPage) {
                                onZoomClick()
                                haptic.performHapticFeedback(HapticFeedbackType.ContextClick)
                            } else {
...
                    modifier = Modifier.zIndex(22f)
                )
                FloatingActionButtonMenuItem(
                    onClick = { onAddNormalTask(); onFabMenuToggle(false) },
                    icon = { Icon(Icons.Default.Add, contentDescription = null) },
                    text = { Text(text = stringResource(R.string.fab_task)) },
                    modifier = Modifier.zIndex(22f).testTag("ADDTASK")
                )
                FloatingActionButtonMenuItem(
                    onClick = { onAddRecurringTask(); onFabMenuToggle(false) },
                    icon = { Icon(Icons.Default.Repeat, contentDescription = null) },
                    text = { Text(text = stringResource(R.string.fab_recurring)) },
                    modifier = Modifier.zIndex(22f)
...
