...
            }
            popBack()
        },
        sheetState = rememberModalBottomSheetState(skipPartiallyExpanded = true),
        containerColor = MaterialTheme.colorScheme.surfaceContainer,
        dragHandle = { BottomSheetDefaults.DragHandle() },
        modifier = Modifier.fillMaxSize().testTag("EDITSHEET")
    ) {
        if (pickerContext == PickerContext.EXPIRATION_DATE || pickerContext == PickerContext.REMINDER_DATE) {
            DatePickerModal(
                onDateSelected = { dateMillis ->
                    if (dateMillis != null) {
                        val selectedDate = Instant.ofEpochMilli(dateMillis).atZone(ZoneOffset.UTC).toLocalDate()
...
